// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/AddressForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c21 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: -4px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c17 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c17 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 26px;
  width: 26px;
}

.c17 div span {
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 2px;
  border: solid 3px #E4E5ED;
}

.c17 div span div {
  display: none;
}

.c17 div span div svg {
  fill: #fff;
}

.c17 div:focus {
  outline: none;
}

.c17 .checkout_icon {
  color: red;
}

.c17 input:checked + div span {
  background-clip: content-box;
  background-color: #00B0CA;
  border: solid 2px #00B0CA;
}

.c17 input:checked + div span div {
  display: block;
  position: absolute;
  left: 3px;
  bottom: 2px;
  top: 2.5px;
}

.c18 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c20 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c19 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  top: 100%;
}

.c2 {
  width: 100%;
}

.c2 .privacyAndPolicies {
  margin-top: 1rem;
  width: 100%;
}

.c2 .privacyAndPolicies svg {
  margin-top: 0.4rem;
}

.c2 .privacyAndPolicies a {
  color: #00B0CA;
}

.c2 .additionals {
  margin-top: 2rem;
  width: 100%;
}

.c2 .additionals a {
  color: #00B0CA;
}

.c2 .labelValidation {
  color: #E84545;
  font-size: 0.875rem;
  font-weight: 300;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c15 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c2 .privacyAndPolicies {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c2 .additionals {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <form
        className="c2"
        onSubmit={[Function]}
      >
        <div
          className="c3"
        >
          <div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  1
                </span>
                <span
                  className="c7"
                >
                  Cliente
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="given-name"
                        className="c12"
                        data-cy="addressFormFirstName"
                        disabled={false}
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Nombre completo"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Nombre completo
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="documento"
                        className="c12"
                        data-cy="addressFormDNI"
                        disabled={false}
                        maxLength={20}
                        name="documentNumber"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de documento"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Número de documento
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="email"
                        className="c12"
                        data-cy="addressFormEmail"
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Email"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Email
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="tel"
                        className="c12"
                        data-cy="addressFormPhone"
                        disabled={false}
                        maxLength={9}
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de celular"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Número de celular
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c15"
              >
                <div
                  className="privacyAndPolicies"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                      >
                         Políticas de privacidad 
                      </a>
                        y
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                      >
                         Términos y condiciones 
                      </a>
                    </label>
                  </div>
                </div>
                <div
                  className="additionals"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       Acepto el tratamiento para
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                      >
                         Fines adicionales 
                      </a>
                      (opcional )
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  2
                </span>
                <span
                  className="c7"
                >
                  Dirección
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line1"
                        className="c12"
                        data-cy="addressFormStreetAddress1"
                        disabled={false}
                        name="streetAddress1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Dirección"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Dirección
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line2"
                        className="c12"
                        data-cy="addressFormStreetAddress2"
                        disabled={false}
                        name="streetAddress2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Información adicional"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Información adicional
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c18"
                >
                  <div
                    className="css-1pcexqc-container"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="css-d1vkk-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-tntsk8"
                      >
                        <div
                          className="css-151xaom-placeholder"
                        >
                          
                        </div>
                        <div
                          className="css-1g6gooi"
                        >
                          <div
                            className=""
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-autocomplete="list"
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              data-cy="addressFormCity"
                              disabled={false}
                              id="react-select-7-input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder="Selecciona tu distrito"
                              spellCheck="false"
                              style={
                                Object {
                                  "background": 0,
                                  "border": 0,
                                  "boxSizing": "content-box",
                                  "color": "inherit",
                                  "fontSize": "inherit",
                                  "label": "input",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "1px",
                                }
                              }
                              tabIndex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              
                            </div>
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              Selecciona tu distrito
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="c19"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="inherit"
                          />
                        </svg>
                      </div>
                    </div>
                    <label
                      className="c13"
                      disabled={false}
                    >
                      *Distrito
                    </label>
                  </div>
                  <div
                    className="c20"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="c21"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c21 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: -4px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c17 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c17 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 26px;
  width: 26px;
}

.c17 div span {
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 2px;
  border: solid 3px #E4E5ED;
}

.c17 div span div {
  display: none;
}

.c17 div span div svg {
  fill: #fff;
}

.c17 div:focus {
  outline: none;
}

.c17 .checkout_icon {
  color: red;
}

.c17 input:checked + div span {
  background-clip: content-box;
  background-color: #00B0CA;
  border: solid 2px #00B0CA;
}

.c17 input:checked + div span div {
  display: block;
  position: absolute;
  left: 3px;
  bottom: 2px;
  top: 2.5px;
}

.c18 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c20 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c19 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  top: 100%;
}

.c2 {
  width: 100%;
}

.c2 .privacyAndPolicies {
  margin-top: 1rem;
  width: 100%;
}

.c2 .privacyAndPolicies svg {
  margin-top: 0.4rem;
}

.c2 .privacyAndPolicies a {
  color: #00B0CA;
}

.c2 .additionals {
  margin-top: 2rem;
  width: 100%;
}

.c2 .additionals a {
  color: #00B0CA;
}

.c2 .labelValidation {
  color: #E84545;
  font-size: 0.875rem;
  font-weight: 300;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c15 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c2 .privacyAndPolicies {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c2 .additionals {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <form
        className="c2"
        onSubmit={[Function]}
      >
        <div
          className="c3"
        >
          <div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  1
                </span>
                <span
                  className="c7"
                >
                  Cliente
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="given-name"
                        className="c12"
                        data-cy="addressFormFirstName"
                        disabled={false}
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Nombre completo"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Nombre completo
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="documento"
                        className="c12"
                        data-cy="addressFormDNI"
                        disabled={false}
                        maxLength={20}
                        name="documentNumber"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de documento"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Número de documento
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="email"
                        className="c12"
                        data-cy="addressFormEmail"
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Email"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Email
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="tel"
                        className="c12"
                        data-cy="addressFormPhone"
                        disabled={false}
                        maxLength={9}
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de celular"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Número de celular
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c15"
              >
                <div
                  className="privacyAndPolicies"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                      >
                         Políticas de privacidad 
                      </a>
                        y
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                      >
                         Términos y condiciones 
                      </a>
                    </label>
                  </div>
                </div>
                <div
                  className="additionals"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       Acepto el tratamiento para
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                      >
                         Fines adicionales 
                      </a>
                      (opcional )
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  2
                </span>
                <span
                  className="c7"
                >
                  Dirección
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line1"
                        className="c12"
                        data-cy="addressFormStreetAddress1"
                        disabled={false}
                        name="streetAddress1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Dirección"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Dirección
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line2"
                        className="c12"
                        data-cy="addressFormStreetAddress2"
                        disabled={false}
                        name="streetAddress2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Información adicional"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Información adicional
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c18"
                >
                  <div
                    className="css-1pcexqc-container"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="css-d1vkk-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-tntsk8"
                      >
                        <div
                          className="css-151xaom-placeholder"
                        >
                          
                        </div>
                        <div
                          className="css-1g6gooi"
                        >
                          <div
                            className=""
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-autocomplete="list"
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              data-cy="addressFormCity"
                              disabled={false}
                              id="react-select-8-input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder="Selecciona tu distrito"
                              spellCheck="false"
                              style={
                                Object {
                                  "background": 0,
                                  "border": 0,
                                  "boxSizing": "content-box",
                                  "color": "inherit",
                                  "fontSize": "inherit",
                                  "label": "input",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "1px",
                                }
                              }
                              tabIndex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              
                            </div>
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              Selecciona tu distrito
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="c19"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="inherit"
                          />
                        </svg>
                      </div>
                    </div>
                    <label
                      className="c13"
                      disabled={false}
                    >
                      *Distrito
                    </label>
                  </div>
                  <div
                    className="c20"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="c21"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with partial data 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c21 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: -4px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c17 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c17 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 26px;
  width: 26px;
}

.c17 div span {
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 2px;
  border: solid 3px #E4E5ED;
}

.c17 div span div {
  display: none;
}

.c17 div span div svg {
  fill: #fff;
}

.c17 div:focus {
  outline: none;
}

.c17 .checkout_icon {
  color: red;
}

.c17 input:checked + div span {
  background-clip: content-box;
  background-color: #00B0CA;
  border: solid 2px #00B0CA;
}

.c17 input:checked + div span div {
  display: block;
  position: absolute;
  left: 3px;
  bottom: 2px;
  top: 2.5px;
}

.c18 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c20 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c19 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  top: 100%;
}

.c2 {
  width: 100%;
}

.c2 .privacyAndPolicies {
  margin-top: 1rem;
  width: 100%;
}

.c2 .privacyAndPolicies svg {
  margin-top: 0.4rem;
}

.c2 .privacyAndPolicies a {
  color: #00B0CA;
}

.c2 .additionals {
  margin-top: 2rem;
  width: 100%;
}

.c2 .additionals a {
  color: #00B0CA;
}

.c2 .labelValidation {
  color: #E84545;
  font-size: 0.875rem;
  font-weight: 300;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c15 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c2 .privacyAndPolicies {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c2 .additionals {
    width: 100%;
  }
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <form
        className="c2"
        onSubmit={[Function]}
      >
        <div
          className="c3"
        >
          <div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  1
                </span>
                <span
                  className="c7"
                >
                  Cliente
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="given-name"
                        className="c12"
                        data-cy="addressFormFirstName"
                        disabled={false}
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Nombre completo"
                        value="John"
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Nombre completo
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="documento"
                        className="c12"
                        data-cy="addressFormDNI"
                        disabled={false}
                        maxLength={20}
                        name="documentNumber"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de documento"
                        value=""
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Número de documento
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="email"
                        className="c12"
                        data-cy="addressFormEmail"
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Email"
                        value="abc@xyz.com"
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Email
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="tel"
                        className="c12"
                        data-cy="addressFormPhone"
                        disabled={false}
                        maxLength={9}
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Número de celular"
                        value="555-55555"
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Número de celular
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c15"
              >
                <div
                  className="privacyAndPolicies"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                      >
                         Políticas de privacidad 
                      </a>
                        y
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                      >
                         Términos y condiciones 
                      </a>
                    </label>
                  </div>
                </div>
                <div
                  className="additionals"
                >
                  <div
                    className="c16"
                  >
                    <label
                      className="c17"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span>
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       Acepto el tratamiento para
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                      >
                         Fines adicionales 
                      </a>
                      (opcional )
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <span
                  className="c6"
                >
                  2
                </span>
                <span
                  className="c7"
                >
                  Dirección
                </span>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line1"
                        className="c12"
                        data-cy="addressFormStreetAddress1"
                        disabled={false}
                        name="streetAddress1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Dirección"
                        value="Street line 1"
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        *Dirección
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                    disabled={false}
                  >
                    <div
                      className="c11"
                    >
                      <input
                        autoComplete="address-line2"
                        className="c12"
                        data-cy="addressFormStreetAddress2"
                        disabled={false}
                        name="streetAddress2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Información adicional"
                        value="Street line 2"
                      />
                      <label
                        className="c13"
                        disabled={false}
                      >
                        Información adicional
                      </label>
                    </div>
                  </div>
                  <div
                    className="c14"
                  />
                </div>
              </div>
              <div
                className="c8"
              >
                <div
                  className="c18"
                >
                  <div
                    className="css-1pcexqc-container"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="css-d1vkk-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-tntsk8"
                      >
                        <div
                          className="css-151xaom-placeholder"
                        >
                          
                        </div>
                        <div
                          className="css-1g6gooi"
                        >
                          <div
                            className=""
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-autocomplete="list"
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              data-cy="addressFormCity"
                              disabled={false}
                              id="react-select-9-input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder="Selecciona tu distrito"
                              spellCheck="false"
                              style={
                                Object {
                                  "background": 0,
                                  "border": 0,
                                  "boxSizing": "content-box",
                                  "color": "inherit",
                                  "fontSize": "inherit",
                                  "label": "input",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "1px",
                                }
                              }
                              tabIndex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              
                            </div>
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              Selecciona tu distrito
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="c19"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="inherit"
                          />
                        </svg>
                      </div>
                    </div>
                    <label
                      className="c13"
                      disabled={false}
                    >
                      *Distrito
                    </label>
                  </div>
                  <div
                    className="c20"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="c21"
  />
</div>
`;
